--- a/Client/Design/vDesk/MetaInformation/Mask/Row/Validator/Number.css
+++ b/Client/Design/vDesk/MetaInformation/Mask/Row/Validator/Number.css
@@ -1,4 +1,5 @@
 /* vDesk.MetaInformation.Row */
 .Mask.Editor > .Rows > .Row.Editor > .Cell > .Validator.Number > .EditControl {
     width: 33%;
+    float: left;
 }
